[package]
name = "usb_power_meter"
version = "0.1.0"
authors = ["AndrewGi <andrew@gilbrough.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
ssd1306 = "0.3.1"
cortex-m-rt = "0.6.12"
embedded-graphics = "0.6.2"
panic-halt = "0.2.0"
stm32f1xx-hal = {version = "0.5.3", features=["stm32f103"]}